Bug 31876 - "Date and time" documentation fixes for POSIX.1-2024 etc
Summary: "Date and time" documentation fixes for POSIX.1-2024 etc
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: time (show other bugs)
Version: 2.39
: P2 normal
Target Milestone: 2.40
Assignee: eggert
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-10 18:10 UTC by eggert
Modified: 2024-06-15 16:19 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eggert 2024-06-10 18:10:14 UTC
The "Date and Time" section of the manual is dated and in some cases incorrect, and now that POSIX.1-2024 is official now is a good time update it. I plan to post fixes to the mailing list and am creating this bug report to have a bug ID for the fixes.
Comment 1 eggert 2024-06-10 19:54:47 UTC
Patch proposed here:

https://sourceware.org/pipermail/libc-alpha/2024-June/157324.html
Comment 2 eggert 2024-06-15 16:19:27 UTC
No comments, so I installed the patch as commit ee768a30fe9099972dad04c49972c2508a208b9b, with a minor improvement to an example in a followup commit 7c1ec1b7d0b476610c811b0babeab831e626c088. Closing the bug report.

By the way, POSIX.1-2024 was published yesterday in PDF form, but it's not online yet. See <http://www.opengroup.org/austin/> (2024-06-14)